# voicevox_core

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  renovate.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/onnxruntime-cache-location/: action.yml
.github/workflows/: benchmarks.yml  build_and_deploy.yml  build_and_deploy_downloader.yml  download_test.yml  ff-merge.yml  generate_document.yml  labeler.yml  measure-ep-init.yml  psscriptanalyzer.yml  test-run-async.yml  test.yml  typos.yml  update_rust_toolchain.yml
build_util/: codesign_sv.bash
core/src/: core.cpp
core/src/engine/: synthesis_engine.cpp
crates/download/: Cargo.toml
crates/test_util/: Cargo.toml
crates/voicevox_core/: Cargo.toml
crates/voicevox_core/examples/: example.rs  nonblocking-tts.rs  simple-tts.rs
crates/voicevox_core/src/: devices.rs  error.rs  include_models.rs  infer.rs  lib.rs  manifest.rs  metas.rs  publish.rs  result_code.rs  status.rs  synthesizer.rs  voice_model.rs  voice_synthesizer.rs
crates/voicevox_core/src/__internal/: interop.rs
crates/voicevox_core/src/core/: devices.rs  infer.rs
crates/voicevox_core/src/core/infer/runtimes/: onnxruntime.rs
crates/voicevox_core/src/engine/: acoustic_feature_extractor.rs  full_context_label.rs  kana_parser.rs  model.rs  mora_list.rs  open_jtalk.rs  synthesis_engine.rs
crates/voicevox_core/src/infer/: domains.rs  session_set.rs
crates/voicevox_core/src/infer/runtimes/: onnxruntime.rs
crates/voicevox_core/src/status/: model_file.rs
crates/voicevox_core_c_api/: Cargo.toml  build.rs  cbindgen.toml
crates/voicevox_core_c_api/src/: compatible_engine.rs  helpers.rs  lib.rs
crates/voicevox_core_c_api/tests/e2e/: snapshots.toml  symbols.rs  testcases.rs
crates/voicevox_core_c_api/tests/e2e/testcases/: global_infos.rs  simple_tts.rs  voice_model_infos.rs
crates/voicevox_core_java_api/: Cargo.toml  settings.gradle
crates/voicevox_core_java_api/lib/: build-android.gradle  build.gradle
crates/voicevox_core_python_api/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  requirements-test.txt  requirements.txt
crates/voicevox_core_python_api/python/sharevox_core/: __init__.py  _rust.pyi
crates/voicevox_core_python_api/python/test/: test_asyncio_user_dict_load.py  test_audio_query.py
crates/voicevox_core_python_api/python/voicevox_core/: __init__.py  _models.py  _rust.pyi
crates/voicevox_core_python_api/python/voicevox_core/_models/: __init__.py
crates/voicevox_core_python_api/python/voicevox_core/_rust/: __init__.pyi
crates/voicevox_core_python_api/src/: convert.rs  lib.rs
docs/apis/c_api/doxygen/: Doxyfile
docs/apis/python_api/: conf.py  index.rst
docs/downloads/: download.md
example/cpp/unix/: .gitignore  CMakeLists.txt  README.md  simple_tts.cpp
example/cpp/windows/: README.md
example/cpp/windows/simple_tts/: simple_tts.cpp  simple_tts.h
example/kotlin/app/: build.gradle
example/pyo3/: README.md  run.py
example/python/: .gitignore  README.md  core.py  run-asyncio.py  run.py
model/: gaussian_model.onnx
model/test/: model_config.json
scripts/downloads/: download.ps1  download.sh
tests/: core_test.py
