[workspace]
members = [
    "crates/download",
    "crates/test_util",
    "crates/voicevox_core",
    "crates/voicevox_core_c_api",
    "crates/voicevox_core_java_api",
    "crates/voicevox_core_python_api",
    "crates/xtask"
]

[workspace.dependencies]
anyhow = "1.0.75"
async_zip = { version = "0.0.15", features = ["full"] }
clap = { version = "4.4.6", features = ["derive"] }
easy-ext = "1.0.1"
fs-err = { version = "2.9.0", features = ["tokio"] }
itertools = "0.11.0"
once_cell = "1.18.0"
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
strum = { version = "0.25.0", features = ["derive"] }
tempfile = "3.8.0"
test_util = { path = "crates/test_util" }
thiserror = "1.0.49"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
voicevox_core = { path = "crates/voicevox_core" }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "sync"] }
derive-getters = "0.3.0"

# FIXME: iOS対応のpull request(https://github.com/wesleywiser/process_path/pull/16)がマージされる見込みが無いため
[workspace.dependencies.process_path]
git = "https://github.com/VOICEVOX/process_path.git"
rev = "de226a26e8e18edbdb1d6f986afe37bbbf35fbf4"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

# min-sized-rustを元にrelease buildのサイズが小さくなるようにした
# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
