[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
android_logger = "0.13.1"
anstream = { version = "0.5.0", default-features = false }
anstyle-query = "1.1.2"
anyhow = "1.0.96"
assert_cmd = "2.0.16"
async-fs = "2.1.2"
async-lock = "3.4.0"
async_zip = "=0.0.16"
bindgen = "0.69.4"
binstall-tar = "0.4.42"
blocking = "1.6.1"
bytes = "1.10.0"
camino = "1.1.9"
cargo_metadata = "0.18.1"
cbindgen = "0.24.3"
chrono = { version = "0.4.39", default-features = false }
clap = "4.5.31"
color-eyre = "0.6.3"
colorchoice = "1.0.3"
comrak = "0.26.0"
const_format = "0.2.34"
cstr = "0.2.12" # https://github.com/dtolnay/syn/issues/1502
derive-getters = "0.2.0"
derive-new = "0.5.9"
derive_more = "0.99.17"
duct = "0.13.7"
duplicate = "1.0.0"
easy-ext = "1.0.2"
educe = "0.4.23"
enum-map = "3.0.0-beta.2"
eyre = "0.6.12"
flate2 = "1.1.0"
fs-err = "2.11.0"
futures-core = "0.3.31"
futures-util = "0.3.25"
futures-lite = "2.6.0"
futures-io = "0.3.31"
heck = "0.4.1"
humansize = "2.1.3"
indexmap = "2.7.1"
indicatif = "0.17.11"
indoc = "2.0.5"
inventory = "0.3.19"
itertools = "0.10.5"
jlabel = "0.1.4"
jni = "0.21.1"
libc = "0.2.170"
libloading = "0.7.3"
libtest-mimic = "0.6.0"
log = "0.4.26"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
octocrab = { version = "0.19.0", default-features = false }
once_cell = "1.20.3"
ouroboros = "0.18.5"
parse-display = "0.8.2"
pollster = "0.3.0"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.93"
pyo3 = "0.20.3"
pyo3-asyncio = "0.20.0"
pyo3-log = "0.9.0"
quote = "1.0.38"
rayon = "1.10.0"
ref-cast = "1.0.23"
regex = "1.11.1"
reqwest = { version = "0.11.13", default-features = false }
rstest = "0.15.0"
rstest_reuse = "0.6.0"
scraper = "0.19.1"
serde = "1.0.218"
serde_json = "1.0.139"
serde_with = "3.12.0"
smallvec = "1.14.0"
strum = "0.24.1"
syn = "2.0.98"
tar = "0.4.44"
tempfile = "3.17.1"
test_util = { path = "crates/test_util" }
thiserror = "1.0.37"
tokio = "1.43.0"
toml = "0.7.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typetag = "0.2.19"
url = "2.5.4"
uuid = "1.14.0"
voicevox_core = { path = "crates/voicevox_core" }
windows = "0.43.0"
zip = "0.6.3"

[workspace.dependencies.voicevox-ort]
git = "https://github.com/VOICEVOX/ort.git"
rev = "8627833456a69e7841ae2a29fd184752df8de8d9"

[workspace.dependencies.open_jtalk]
git = "https://github.com/VOICEVOX/open_jtalk-rs.git"
rev = "e1940f3fd61a48bed5bbec8cd2645e13923b1f80"

# FIXME: iOS対応のpull request(https://github.com/wesleywiser/process_path/pull/16)がマージされる見込みが無いため
[workspace.dependencies.process_path]
git = "https://github.com/VOICEVOX/process_path.git"
rev = "de226a26e8e18edbdb1d6f986afe37bbbf35fbf4"

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false

# min-sized-rustを元にrelease buildのサイズが小さくなるようにした
# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
