[package]
name = "download"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
binstall-tar = "0.4.39"
bytes = "1.5.0"
clap.workspace = true
flate2 = "1.0.27"
fs-err.workspace = true
futures-core = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.7"
itertools.workspace = true
octocrab = { version = "0.31.1", default-features = false, features = ["rustls-tls", "stream"] }
once_cell.workspace = true
platforms = "3.1.2"
rayon = "1.8.0"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "stream"] }
strum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.4.1"
zip = "0.6.6"
