[package]
name = "voicevox_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
directml = ["onnxruntime/directml"]

[dependencies]
anyhow.workspace = true
async_zip.workspace = true
cfg-if = "1.0.0"
derive-getters.workspace = true
derive-new = "0.5.9"
derive_more = "0.99.17"
duplicate = "1.0.0"
easy-ext.workspace = true
fs-err.workspace = true
futures = "0.3.28"
indexmap = { version = "2.0.2", features = ["serde"] }
itertools.workspace = true
nanoid = "0.4.0"
once_cell.workspace = true
process_path.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dependencies.onnxruntime]
git = "https://github.com/VOICEVOX/onnxruntime-rs.git"
rev = "ebb9dcb9b26ee681889b52b6db3b4f642b04a250"

[dependencies.open_jtalk]
git = "https://github.com/VOICEVOX/open_jtalk-rs.git"
rev = "a16714ce16dec76fd0e3041a7acfa484921db3b5"

[dev-dependencies]
flate2 = "1.0.27"
heck = "0.4.1"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
tar = "0.4.40"
test_util.workspace = true

[target."cfg(windows)".dependencies]
humansize = "2.1.3"
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_Graphics_Dxgi"] }
