[package]
name = "voicevox_core_python_api"
version = "0.0.0"
edition.workspace = true
publish.workspace = true

[package.metadata.maturin]
name = "voicevox_core._rust"
python-source = "python"

[lib]
crate-type = ["cdylib"]

[features]
directml = ["voicevox_core/directml"]

[dependencies]
easy-ext.workspace = true
log = "0.4.20"
once_cell.workspace = true
pyo3 = { version = "0.19.2", features = ["abi3-py38", "extension-module"] }
pyo3-asyncio = { version = "0.19.0", features = ["tokio-runtime"] }
pyo3-log = "0.8.3"
serde.workspace = true
serde_json.workspace = true
test_util.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
voicevox_core.workspace = true
